--- a/src/style.css
+++ b/src/style.css
@@ -8,7 +8,7 @@
     font-family: MyFont;
 }
 
-#nav-header {
+#navHeader {
     width: 100vw;
     height: 100px;
     background-color: rgb(200, 72, 60);
@@ -20,7 +20,7 @@
     border-bottom: solid 3px black;
 }
 
-#header-logo {
+#headerLogo {
     display: flex;
     align-items: center;
 }
@@ -34,11 +34,18 @@ h1 {
 
 h2 {
     font-size: 2vw;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
+}
+
+h3 {
+    font-size: 1.75vw;
+    margin-bottom: 10px;
 }
 
 #logo {
     margin: 0px 5px 0px 20px;
+    width: 80px;
+    height: auto;
 }
 
 ul {
@@ -57,8 +64,8 @@ a {
     color: black;
 }
 
-#content-body {
-    height: 100vh;
+#contentBody {
+    height: auto;
     width: 100vw;
     background-color: rgb(246, 215, 130);
 
@@ -67,7 +74,6 @@ a {
 }
 
 #card {
-    height: 70vh;
     width: 80vw;
     background-color: rgb(200, 72, 60);
 
@@ -75,30 +81,46 @@ a {
     border-bottom-left-radius: 35px;
     border: solid 3px black;
 
-    margin-top: 50px;
+    margin: 50px 0px;
 
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    padding-top: 20px;
 }
 
-#card-text {
+#cardContent {
     width: 100%;
-    height: 30%;
     background-color: white;
+    height: auto;
     border-top: solid 3px black;
     border-bottom: solid 3px black;
+    border-collapse: collapse;
+    border-right: solid 3px black;
     box-shadow: inset 0px 0px 20px rgba(0, 0, 0, 0.616);
 
     padding: 45px 25px;
     margin-bottom: 20%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-#card-image {
+#cardcontent > div {
+    flex: 1;
+}
+
+.cardText {
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+#cardImage {
     height: 95%;
+    max-height: 650px;
     margin-right: 17px;
-    border-top-right-radius: 30px;
+    border-top-right-radius: 20px;
     border: solid 3px black;
+    border-collapse: collapse;
+    margin-left: -3px;
 }
 
 #footer {
@@ -110,4 +132,8 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+p {
+    margin-bottom: 20px;
 }
