--- a/src/style.css
+++ b/src/style.css
@@ -15,18 +15,20 @@
 
 * {
     margin: 0;
+    padding: 0;
 }
 
 #navHeader {
-    width: 100vw;
+    max-width: 100vw;
     height: 100px;
-    background-color: #8E5572;
 
     display: flex;
     align-items: center;
     justify-content: space-between;
 
-    border-bottom: solid 3px #3a222b;
+    border-bottom: solid 3px;
+    box-sizing: border-box;
+
 }
 
 #headerLogo {
@@ -85,7 +87,7 @@ a {
 
 #contentBody {
     height: auto;
-    width: 100vw;
+    max-width: 100vw;
     background-color: #BCAA99;
 
     display: flex;
@@ -94,10 +96,10 @@ a {
 
 #card {
     width: 60vw;
-    background-color: #8E5572;
     border-top-left-radius: 35px;
     border-bottom-right-radius: 35px;
     border: solid 3px #3a222b;
+    box-sizing: border-box;
 
     margin: 50px 0px;
 
@@ -111,9 +113,9 @@ a {
     height: auto;
     box-shadow: inset 0px 0px 20px rgba(0, 0, 0, 0.616);
     border: solid 3px #3a222b;
+    box-sizing: border-box;
     border-top-left-radius: 20px;
     margin-right: -35px;
-
     padding: 30px 60px 0px 25px;
     margin-bottom: 20%;
     display: flex;
@@ -144,19 +146,17 @@ a {
     max-width: 35%;
     border-bottom-right-radius: 20px;
     border: solid 3px #3a222b;
-
+    box-sizing: border-box;
     align-self: flex-end;
 }
 
 #footer {
     height: 80px;
-    width: 100vw;
-    background-color: #8E5572;
+    max-width: 100vw;
     font-size: 30px;
     border-top: solid 3px #3a222b;
-
+    box-sizing: border-box;
     font-family: 'CalibriRegular',  Arial, sans-serif;
-
     display: flex;
     justify-content: center;
     align-items: center;
@@ -164,4 +164,8 @@ a {
 
 p {
     margin-bottom: 20px;
+}
+
+#navHeader, #card, #footer {
+    background-color: #83526b;
 }
